--- a/Semester 2/Systems Organsation 2/1.(14-01).md
+++ b/Semester 2/Systems Organsation 2/1.(14-01).md
@@ -39,3 +39,7 @@
 
 ## Summary
 Computers consist of many levels of abstraction which make complex calculations possible.
+
+Everything started with the [Zeroth Gen](https://www.dw.com/en/19th-century-mechanical-computer-project-set-to-begin/a-6703016)
+
+But now we have **quite a few** transistors in our computers. (4,800,000,000 +)
