--- a/1st-Year/Semester 2/Systems Organsation 2/1.(14-01).md
+++ b/1st-Year/Semester 2/Systems Organsation 2/1.(14-01).md
@@ -1,7 +1,7 @@
 # Lecture 1
 ## Contemporary Multilevel Machines
 ### Levels of Abstraction:
-*Logic* -> *Microarchitecture* -> *Instruction set* -> *Operating System* -> *Assembly Lang* -> *Program-Oriened*
+*Logic* -> *Microarchitecture* -> *Instruction set* -> *Operating System* -> *Assembly Lang* -> *Problem-Oriened*
 
 #### Microarchitecture Level
 - 8-32 registers which are local memory
@@ -30,7 +30,7 @@
 #### Assembly Language
 - Allows programmers to user **human readable programs** to write programs for lower levels.
 
-#### Program-Oriened Language
+#### Problem-Oriened Language
 - Used by app programmers to solve problems
 - Examples are
     - C/C++
