--- a/1st-Year/Semester 2/Systems Organsation 2/2.(16-01).md
+++ b/1st-Year/Semester 2/Systems Organsation 2/2.(16-01).md
@@ -41,7 +41,7 @@
         - `JUMPIF`
         - `LOAD` - Taking a val from memory into a register
         - `OUT` - Putting a val through an I/O devices
-        - `STORE`
+        - `STORE` - Taking a val from memory into a register
 
     ### *_Example Instruction Sets_*
 
