Added img to L3 sys org

--- a/1st-Year/Semester 2/Systems Organsation 2/3.(21-01).md
+++ b/1st-Year/Semester 2/Systems Organsation 2/3.(21-01).md
@@ -18,6 +18,8 @@
 - A byte containing an OP code is sent from RAM to the 8 bit instruction reg.
 - THe contents of the reg are sent to the data buffer.
 ### Interfacing with a 8080 cpu
-1. Control Bus - 
+1. Control Bus
 2. Data Bus
 3. Address Bus
+### Control Signals
+![](img/L3_1.png?raw=true)
