--- a/1st-Year/Semester 2/Foundations of Computer Science 2/2.(18-01).md
+++ b/1st-Year/Semester 2/Foundations of Computer Science 2/2.(18-01).md
@@ -10,7 +10,7 @@
 - If all assignments of *x, P(x)* is **not true**, *∀x P(x)* is not true.
 
 ## The existential quantifier
-- This means that the predicate is true for at leas one assignments
+- This means that the predicate is true for at least one assignments
 - Symbol: **∃**
 
 ### The truth value of the existential quantifier
@@ -28,6 +28,6 @@ Wff: ∀x (P(x) → Q(x))
 
 ## Two Equivalences
 
-`¬∃ x P(x) ≡ ∀x ¬P(x)` is the same as: *If there not is an x that makes P(x) true, every x will not make P(x) true*.
+`¬∃ x P(x) ≡ ∀x¬P(x)` is the same as: *If there not is an x that makes P(x) true, every x will not make P(x) true*.
 
-The reverse of this is: `¬∀x P(x) ≡ ∃x ¬P(x)`.
+The reverse of this is: `¬∀xP(x) ≡ ∃x¬P(x)`.
