--- a/1st-Year/Semester 2/Foundations of Computer Science 2/3.(25-01).md
+++ b/1st-Year/Semester 2/Foundations of Computer Science 2/3.(25-01).md
@@ -29,4 +29,5 @@ protection and which is accredited by the Computer Centre."
 
 - *Some students take both CS1105 and MG1002*: `∃x(takes(x,"CS1105")∧takes(x,"MG1002"))`
 
-- *All students in 1st year CS have a CS email address and a UCC email address*: `∀x(student1stYearCs(x)→(csEmailAddress(x)∧uccEmailAddress(x)))`
+- *All students in 1st year CS have a CS email address and a UCC email address*: `∀x∈F→(csEmailAddress(x)∧uccEmailAddress(x))`
+*F is all first year students in UCC*
