--- a/1st-Year/Semester 2/Systems Organsation 2/4.(23-01).md
+++ b/1st-Year/Semester 2/Systems Organsation 2/4.(23-01).md
@@ -10,13 +10,13 @@
     - *HDDs can store data without power while cpu regs don't*
 
 ### Tech
-### DRAM *cheap*:
+### DRAM *cheap* - "*Dynamic Random Access Memory*"
 - Stored vals are stored by a capacitor charged state.
 - 1 bit stored needs:
     - 1 capacitor
     - 1 transistor (giving us access to that bit)
     - An enable row
     - A bitline (for retrieving)
-### SRAM *expensive*:
+### SRAM *expensive* - "*Static Random Access Memory*"
 - Two cross coupled inverteters used.
 - Mainly used for cache
