--- a/1st-Year/Semester 2/Systems Organsation 2/5.(28-01).md
+++ b/1st-Year/Semester 2/Systems Organsation 2/5.(28-01).md
@@ -15,3 +15,13 @@
 - **Idea**: Divide the memory into multiple **banks** that can be accessed independently. - **Interleaving**/*Banking*
     - Each bank is smaller than entire memory storage
     - Access to each can be overlapped
+    
+### Caching
+- Memory usage is predicted and stored using cache.
+- This speeds up accesd to values in memory
+
+### Error checking
+- Memory controllers check for errors on system startup.
+- They have an extra bit which checks total number of bits.
+- If total's odd, it'll be 1, or else 0.
+- This is called an **Even parity scheme**.
