--- a/1st-Year/Semester 2/Systems Organsation 2/5.(28-01).md
+++ b/1st-Year/Semester 2/Systems Organsation 2/5.(28-01).md
@@ -24,4 +24,4 @@
 - Memory controllers check for errors on system startup.
 - They have an extra bit which checks total number of bits.
 - If total's odd, it'll be 1, or else 0.
-- This is called an **Even parity scheme**.
+- This is called an **Even Parity Scheme**/**Odd Parity Scheme**.
