--- a/1st-Year/Semester 2/Systems Organsation 2/8.(06-02).md
+++ b/1st-Year/Semester 2/Systems Organsation 2/8.(06-02).md
@@ -21,6 +21,8 @@
 - If an error occurs during this time, it's called an interupt.
 
 ## The ISA Instruction Set
+### Data Transfer
+- *MOVE* data between regs / memory.
 ### Arithmetic
 - *ADD* contents of reg
 - *Increment/Decrement*
