--- a/1st-Year/Semester 2/Foundations of Computer Science 2/8.md
+++ b/1st-Year/Semester 2/Foundations of Computer Science 2/8.md
@@ -26,3 +26,7 @@
 ### Isomorphic graphs
 
 - Graphs are isomorhic **if and only if** there is a bijective function `g: V1→V2` if between `vi` and `vj`, there's an edge and between `g(vi)` and `g(vj)` there's an edge.
+
+### Subgraphs
+
+- Subgraphs are subsets of the edges of the supergraph
