--- a/1st-Year/Semester 2/Systems Organsation 2/13.md
+++ b/1st-Year/Semester 2/Systems Organsation 2/13.md
@@ -14,3 +14,7 @@
 - The stack holds IP's for different places in memory.
 
 - For each subroutine, it pushes to stack and pops it when each one returns.
+
+## in
+
+- `in 00` - take input from your keyboard to `AL` (the hallway).
