--- a/1st-Year/Semester 2/Foundations of Computer Science 2/8.md
+++ b/1st-Year/Semester 2/Foundations of Computer Science 2/8.md
@@ -7,7 +7,7 @@
 
 ### Euler Circuits
 
-- A circuit is Eulerian if it contains every edge in the graph exactly once.
+- A circuit is Eulerian if it contains every edge in the graph exactly once and they all have even degrees.
 
 ### Hamiltonian Circuits
 
