--- a/2nd-Year/Semester 1/Operating Systems/3.tex
+++ b/2nd-Year/Semester 1/Operating Systems/3.tex
@@ -29,6 +29,7 @@
 \begin{itemize}
     \item \texttt{ls -R}: list recursively
     \item \texttt{tee}: Read from stdin and write to stdout and files at the same time. Example: \texttt{echo `cone' | tee file}
+    \item \texttt{chmod u+x}: u means user
 \end{itemize}
 
 \end{document}
