--- a/2nd-Year/Semester 1/Logic Design/2.tex
+++ b/2nd-Year/Semester 1/Logic Design/2.tex
@@ -11,14 +11,15 @@ All switches in a logic circuit have to be closed to get an output of 1.
 
 \subsection*{Symbols}
 \begin{itemize}
-    \item OR: \texttt{+}
-    \item AND: \texttt{.}
-    \item NOT: \texttt{!}
+    \item OR- \texttt{+}
+    \item AND- \texttt{.}
+    \item NOT- \texttt{!}
 \end{itemize}
 
 \subsection*{Functions}
 \begin{itemize}
     \item To get the number of states of a circuit with \textit{n} switches, get \textit{2^n}
+    \item When serializing cirucits that have apparent loops (like a rectifier), OR every possible AND combination.
 \end{itemize}
 
 \end{document}
