--- a/2nd-Year/Semester 1/Computer Architecture/8.md
+++ b/2nd-Year/Semester 1/Computer Architecture/8.md
@@ -63,3 +63,7 @@ Then follow the steps above
     - Row major (C and modern langs)
 
 - `Size = X + Y . Z`
+
+- EG: `[0][1]` will be before `[1][0]`
+
+- Look up: `Poiners $aN to [x][0]`
