--- a/2nd-Year/Semester 1/Operating Systems/10.md
+++ b/2nd-Year/Semester 1/Operating Systems/10.md
@@ -1,14 +1,40 @@
 # Lecture 9
-*09/10/2019*
+*07/10/2019*
 
-## Sed
-`sed -f scriptfile editfile > output`
+## Filesystems
 
-### Example command 
-`s/cat/dog/` Replace cat with dog
+- Mac filesystems have dotfiles such as .\_DSStore in order to store data on files
 
-```
-/^<Company-list>/r company.list
-/^Company-list>/d
-```
-Deletes things listed in company list
+## Tar
+- `tar -ztvf` == `tar --gzip --verbose --file`
+
+- `-x`: extract
+- `-r`: append
+- `-c`: create
+- `-v`: verbose
+- `-f`: file
+- `-z`: gzip (`*.tar.gz`)
+
+## Cron
+- Daemon: activates processes when some condition is activated
+
+- Crond: cron daemon
+
+- Defalt crontab: `/etc/crontab`
+
+## Rsync
+- remote file sync
+
+- Delivered over ssh usually
+
+- Copies files only. Use -a to copy dirs
+
+## ZFS
+- limit: 2^78 bytes (278 zebibytes)
+
+- large fs's
+- usues hierarchical checksums, copy on all writes of updates
+
+- great for doing snapshots
+
+- designed by oracle
