--- a/2nd-Year/Semester 1/Logic Design/7.md
+++ b/2nd-Year/Semester 1/Logic Design/7.md
@@ -4,6 +4,7 @@
 ## Karnaugh Map
 
 - O notation: replace Irrelevant vars with *
+- Blocks must me rectangular powers of 2
 
 ### Minterm Example
 ```
@@ -112,3 +113,5 @@ AB 00  01  11  10
 ```
 
 You can also overlap blocks if there's 3 in a row and treat them the same
+
+With maxterms we can match the 0's. Just invert the vars before use
