--- a/4th-Year/Grid Computing/1.md
+++ b/4th-Year/Grid Computing/1.md
@@ -24,7 +24,7 @@ creation date: 2021-09-16 15:01
 ## SPMD
 - One Program: running on loads of different datasets on loads of cores.
 - Has interconnect.
-- NPI is SPMD.
+- MPI is SPMD.
 
 ## Speedup
 - `(exec time one processor)/(exec time with n processors).`
